<resources>
    <string name="app_name">The Diner Cafe</string>
    <string name="first_activity_name">The Diner Cafe</string>
    <string name="description">DESCRIPTION:</string>
    <string name="category">CATEGORY:</string>
    <string name="ingridients">INGRIDIENTS:</string>
    <string name="calorie">CALORIE:</string>
    <string name="currency">$</string>
    <string name="button_order">ORDER</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_home_long">Show All Food</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_settings_long">Change App Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_about_long">About Us</string>

    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically if Wi-fi is available</string>
    <string name="pref_syncConnectionType">Sync interval</string>
    <string name="pref_sync_list">pref_sync_list</string>

    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">Aplikacija: "The Diner Cafe"\nAutor: Danijel Copic</string>
    <string name="dialog_about_yes">OK</string>
    <string name="dialog_about_no">Cancel</string>

    <string name="notification_title">Item ordered</string>
    <string name="notification_text">The selected item has been ordered and will be shipped during the day.</string>

    <string name="master_action_create">Create</string>

    <string name="detail_button_buy">Buy</string>
    <string name="detal_action_update">Update</string>
    <string name="detal_action_delete">Delete</string>

    <string name="activity_first_name">First Activity</string>
    <string name="activity_first_toolbar_title">Toolbar Title</string>

    <string name="activity_settings_name">Settings Activity</string>

    <string name="fragment_master_action_create">Create</string>

    <string name="fragment_detail_button_buy">Buy</string>
    <string name="fragment_detal_action_update">Update</string>
    <string name="fragment_detal_action_delete">Delete</string>


</resources>
